# on-line_store

./: .gitignore  pyproject.toml  requirements.txt
myproject/: README.md  category_fixture.json  products_fixture.json  requirements.txt
myproject/blog/: __init__.py  admin.py  forms.py  models.py  urls.py  views.py
myproject/blog/migrations/: 0001_initial.py  0002_blogpost_views_counter.py  0003_remove_blogpost_views_count.py  0004_blogpost_is_published.py  0005_alter_blogpost_is_published.py
myproject/blog/templates/blog/: base.html  blogpost_confirm_delete.html  blogpost_create.html  blogpost_detail.html  blogpost_list.html  header.html
myproject/catalog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
myproject/catalog/management/commands/: add_products.py
myproject/catalog/migrations/: 0001_initial.py  0002_rename_pr_product.py  0003_contact_alter_product_photo_alter_product_updated_at.py  0004_alter_product_category.py
myproject/catalog/templates/: contacts.html  home.html
myproject/catalog/templates/catalog/: base.html  contact_list.html  header.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
myproject/catalog/templates/catalog/includes/: inc_menu.html
myproject/catalog/templates/includes/: inc_menu.html
myproject/catalog/templates/products/: base.html  product_detail.html  products_list.html
myproject/catalog/templatetags/: forms.py  my_tags.py
myproject/config/: settings.py  urls.py
