[project]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Irina Koh",email = "arina2009.91@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pillow (>=12.2.0,<13.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
